...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/text_fields_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x6"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnDouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnSmsCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnPincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
